[gd_scene load_steps=3 format=3 uid="uid://c5j22jtwhkxmm"]

[ext_resource type="Script" uid="uid://blcyfwlbdh2gx" path="res://nodes/entity/components/entity-range/entity_range.gd" id="1_b2eam"]

[sub_resource type="SphereShape3D" id="SphereShape3D_b2eam"]
resource_local_to_scene = true
radius = 3.0

[node name="EntityRange" type="Area3D"]
collision_layer = 64
collision_mask = 4
script = ExtResource("1_b2eam")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
shape = SubResource("SphereShape3D_b2eam")
debug_color = Color(1, 0, 0, 0.5)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
